[package]
name = "pakstak"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
http-auth = { version = "0.1", default-features = false }
ring = "0.17"
tar = "0.4"
thiserror = "2.0"
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
temp-dir = "0.1"

