[package]
name = "pakstak"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
flate2 = "1.1"
http-auth = { version = "0.1", default-features = false }
libc = "0.2"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tar = "0.4"
thiserror = "2.0"
ureq = { version = "3.3", default-features = false, features = ["rustls-no-provider", "platform-verifier", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
temp-dir = "0.2"

